last mistakes git.html

--- a/html/git.html
+++ b/html/git.html
@@ -14,11 +14,11 @@
       <div class="card">
          <p class="subtitle">Git</p>
           <ul>
-            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
-            <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
+            <li>ls-Показать файлы в данной папке, кроме скрытых.</li>
+            <li>cd - Для навигации по файлам и каталогам в системе используйте команду cd, за которой следует полный путь или имя каталога. Запуск этой команды без флага или параметра перенесет вас в домашнюю папку.</li>
             <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
             <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+            <li>mv app1/*.* app2 - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно перемещать файлы между директориями /</li>
          </ul>
       </div>
       <!--footer-->
